# Windows-mcp

./: .gitignore  AI_USAGE_GUIDE.md  CREATE_PR.txt  IMPROVEMENTS_V0.3.md  LICENSE  PERFORMANCE_V0.4.md  PR_DESCRIPTION.md  QUICK_START.md  README.md  SUMMARY_V0.3.md  SYSTEM_PROMPT.md  package.json  pyproject.toml
examples/: automation_examples.md  claude_desktop_config.json
windows_mcp/: __init__.py  server.py  utils.py
windows_mcp/desktop/: __init__.py  config.py  service.py  views.py
windows_mcp/tree/: __init__.py  config.py  service.py  views.py
